# python-decompile3

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  ChangeLog-spell-corrected.diff  HISTORY.md  HOW-TO-REPORT-A-BUG.md  MANIFEST.in  Makefile  NEWS.md  PKG-INFO  README.rst  __pkginfo__.py  appveyor.yml  compile_tests  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: macos.yml  (+3 more)
admin-tools/: README.md  check-3.7-3.10-versions.sh  check-3.8-3.10-versions.sh  check-newest-versions.sh  check-versions.sh  checkout_common.sh  how-to-make-a-release.md  install-all-3.7-3.10.sh  make-dist-3.7-3.10.sh  make-dist-newer.sh  make-dist-newest.sh  make-dist-older.sh  make-dist.sh  merge-for-3.7.sh  pyenv-3.7-3.10-versions  pyenv-oldest-versions  pyenv-versions  run-pyenvlib-test-all.sh  setup-master.sh  setup-python-3.7.sh
decompyle3/: __init__.py  code_fns.py  disas.py  lambda_fns.py  linenumbers.py  main.py  parser.py  scanner.py  show.py  util.py  verify.py  version.py
pytest/: .gitignore  Makefile  test_basic.py  test_build_const_key_map.py  test_code_deparse.py  test_deparse.py  test_deparse_offset.py  test_docstring.py  test_fjt.py  test_fstring.py  test_fstring.py-fixup  test_function_call.py  test_grammar.py  test_lambda_grammar.py  test_pysource.py  test_single_compile.py  test_token.py  validate.py
test/: .gitignore  Makefile  add-test.py  bytecompile-tests  dis-compare.py  run-and-email.sh  simple-decompile-code-test.py  simple-uncompyle-code-test.py  test_one  test_pyenvlib.py  test_pythonlib.py
(+235 files in other folders)
